HandlerAttribute带上消息type，消息反序列化完成再分发给处理的Handler

--- a/CSharp/Game/Component/Component.csproj
+++ b/CSharp/Game/Component/Component.csproj
@@ -54,6 +54,7 @@
     <Compile Include="IHandler.cs" />
     <Compile Include="ILogic.cs" />
     <Compile Include="IType.cs" />
+    <Compile Include="KeyDefine.cs" />
     <Compile Include="LogicManager.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="MessageAttribute.cs" />
