--- a/CSharp/Platform/ENetCpp/ENetCpp.vcxproj
+++ b/CSharp/Platform/ENetCpp/ENetCpp.vcxproj
@@ -45,8 +45,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>$(SolutionDir)\Platform\;$(IncludePath)</IncludePath>
-    <OutDir>$(SolutionDir)\Bin\</OutDir>
-    <IntDir>$(SolutionDir)\Temp\</IntDir>
+    <OutDir>$(SolutionDir)\Bin\Debug\</OutDir>
+    <IntDir>$(SolutionDir)\Temp\Debug\</IntDir>
     <TargetExt>.dll</TargetExt>
     <TargetName>$(ProjectName)</TargetName>
   </PropertyGroup>
