--- a/CSharp/Platform/ENet/ENet.csproj
+++ b/CSharp/Platform/ENet/ENet.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Address.cs" />
     <Compile Include="EException.cs" />
     <Compile Include="EEvent.cs" />
+    <Compile Include="ErrorCode.cs" />
     <Compile Include="EService.cs" />
     <Compile Include="Library.cs" />
     <Compile Include="NativeMethods.cs" />
