1.增加Character类 2.hook库修改，更新easyhook到2.7

--- a/CSharp/Game/Component/Component.csproj
+++ b/CSharp/Game/Component/Component.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Buff.cs" />
     <Compile Include="BuffManager.cs" />
+    <Compile Include="Character.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="ConfigAttribute.cs" />
     <Compile Include="ConfigCategory.cs" />
