--- a/CSharp/Platform/Hooks/Hooks.csproj
+++ b/CSharp/Platform/Hooks/Hooks.csproj
@@ -36,16 +36,11 @@
     <Reference Include="EasyHook">
       <HintPath>..\..\Lib\EasyHook.dll</HintPath>
     </Reference>
-    <Reference Include="NLog, Version=2.0.1.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\NLog.2.0.1.2\lib\net45\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RecvHook.cs" />
-    <Compile Include="SendHook.cs" />
+    <Compile Include="Native.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
