--- a/CSharp/App/Modules/Robot/Packages.config
+++ b/CSharp/App/Modules/Robot/Packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="2.0.0" targetFramework="net45" />
+  <package id="NPOI" version="1.2.5" targetFramework="net45" />
   <package id="Prism" version="4.1.0.0" targetFramework="net45" />
   <package id="Prism.MEFExtensions" version="4.1.0.0" targetFramework="net45" />
 </packages>
