--- a/CSharp/Platform/Zmq/Zmq.csproj
+++ b/CSharp/Platform/Zmq/Zmq.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ZmqPoller.cs" />
     <Compile Include="ZmqSocket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
