--- a/CSharp/Platform/ZmqTest/ZmqTest.csproj
+++ b/CSharp/Platform/ZmqTest/ZmqTest.csproj
@@ -62,9 +62,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Helper\Helper.csproj">
+      <Project>{24233cd5-a5df-484b-a482-b79cb7a0d9cb}</Project>
+      <Name>Helper</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Log\Log.csproj">
       <Project>{72e16572-fc1f-4a9e-bc96-035417239298}</Project>
       <Name>Log</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Zmq\Zmq.csproj">
+      <Project>{31a4af28-0988-4862-9d5a-69d34cdb50e6}</Project>
+      <Name>Zmq</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
