--- a/CSharp/Platform/ZmqTest/packages.config
+++ b/CSharp/Platform/ZmqTest/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NetMQ" version="3.3.0.8" targetFramework="net45" />
+  <package id="clrzmq" version="3.0.0-rc1" targetFramework="net45" />
 </packages>
