1.增加TcpAccptor类，可以异步接收连接 2.Log库改成Logger 3.不再使用zmq，zmq c#版对异步支持不好

--- a/CSharp/App/Modules/Login/Login.csproj
+++ b/CSharp/App/Modules/Login/Login.csproj
@@ -95,9 +95,9 @@
     <None Include="Packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Platform\Log\Log.csproj">
+    <ProjectReference Include="..\..\..\Platform\Logger\Logger.csproj">
       <Project>{72e16572-fc1f-4a9e-bc96-035417239298}</Project>
-      <Name>Log</Name>
+      <Name>Logger</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\BossBase\BossBase.csproj">
       <Project>{999910D3-4E7D-45B1-BD2C-47289CD4D1AB}</Project>
