--- a/CSharp/App/BossCommand/BossCommand.csproj
+++ b/CSharp/App/BossCommand/BossCommand.csproj
@@ -52,9 +52,9 @@
       <Project>{24233CD5-A5DF-484B-A482-B79CB7A0D9CB}</Project>
       <Name>Helper</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Platform\Log\Log.csproj">
-      <Project>{72E16572-FC1F-4A9E-BC96-035417239298}</Project>
-      <Name>Log</Name>
+    <ProjectReference Include="..\..\Platform\Logger\Logger.csproj">
+      <Project>{72e16572-fc1f-4a9e-bc96-035417239298}</Project>
+      <Name>Logger</Name>
     </ProjectReference>
     <ProjectReference Include="..\BossBase\BossBase.csproj">
       <Project>{999910D3-4E7D-45B1-BD2C-47289CD4D1AB}</Project>
