升级nuget库,prism升级到5.0

--- a/CSharp/App/BossClient/BossClient.csproj
+++ b/CSharp/App/BossClient/BossClient.csproj
@@ -64,6 +64,9 @@
       <Name>BossBase</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
