--- a/CSharp/App/Editor/app.config
+++ b/CSharp/App/Editor/app.config
@@ -10,6 +10,14 @@
 				<assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-6.6.4.0" newVersion="6.6.4.0" />
 			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.Practices.ServiceLocation" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Windows.Interactivity" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
 	<startup>
@@ -30,9 +38,7 @@
 			</netTcpBinding>
 		</bindings>
 		<client>
-			<endpoint address="net.tcp://localhost:10000/Calculator/" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_Calculator" contract="Proxy.Calculator"
-                name="NetTcpBinding_Calculator">
+			<endpoint address="net.tcp://localhost:10000/Calculator/" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_Calculator" contract="Proxy.Calculator" name="NetTcpBinding_Calculator">
 			</endpoint>
 		</client>
 	</system.serviceModel>
