--- a/CSharp/App/Modules/Login/Packages.config
+++ b/CSharp/App/Modules/Login/Packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
-  <package id="Extended.Wpf.Toolkit" version="2.0.0" targetFramework="net45" />
-  <package id="Prism" version="4.1.0.0" targetFramework="net45" />
-  <package id="Prism.MEFExtensions" version="4.1.0.0" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="Extended.Wpf.Toolkit" version="2.1.0" targetFramework="net45" />
+  <package id="Prism" version="5.0.0" targetFramework="net45" />
+  <package id="Prism.Composition" version="5.0.0" targetFramework="net45" />
+  <package id="Prism.Interactivity" version="5.0.0" targetFramework="net45" />
+  <package id="Prism.MEFExtensions" version="5.0.0" targetFramework="net45" />
+  <package id="Prism.Mvvm" version="1.0.0" targetFramework="net45" />
+  <package id="Prism.PubSubEvents" version="1.0.0" targetFramework="net45" />
 </packages>
